--- a/index.html
+++ b/index.html
@@ -150,10 +150,9 @@ if (!window.matchMedia('(prefers-color-scheme: dark)').matches) {
 }
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 100000);
 
-camera.position.y = 30;
-camera.position.x = -60;
-camera.position.z = 110;
-
+camera.position.y = 93.28800395400346;
+camera.position.x = 3.78419363214868;
+camera.position.z = -137.8697169821669;
 
 
 
